Closed Bug 628649 Opened 15 years ago Closed 13 years ago

nsCoreUtils::IsXLink looks either incorrect or obsolete

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: hsivonen, Assigned: surkov)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The method nsCoreUtils::IsXLink seems to treat an element as an XLink link only if xlink:type="simple" is present. If this code is for the old generic XLink support, the code is obsolete, because generic XLink support is gone. If this code is for SVG, it is incorrect, because SVG doesn't require xlink:type.
It is about XLink only. We use accessible of generic type for SVG, though we should be more diverse.
Blocks: cleana11y
let's make sure to address xlink stuff for svg in bug 809744 and remove nsCoreUtils::IsXLink for now.
Attached patch patchSplinter Review
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #679541 - Flags: review?(trev.saunders)
Attachment #679541 - Flags: review?(trev.saunders) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: