Bug 628649 - remove obsolette xlink support, r=tbsaunde